# dsc190-assignment-06

./: main.py  pyproject.toml
src/dsc190_assignment_06.egg-info/: PKG-INFO  SOURCES.txt
src/nldate/: parser.py
tests/: test_parser.py
